...
    var taskTitleInput by remember { mutableStateOf("") }
    var deadlineDateInput by remember { mutableStateOf("") }

    var showDatePicker by remember { mutableStateOf(false) }
    val datePickerState = rememberDatePickerState()

    val dropdownElements = listOf("Montag", "Dienstag", "Mittwoch", "Donnerstag", "Freitag", "Samstag", "Sonntag")
    var selectedDayInput by remember { mutableStateOf(dropdownElements[0]) }
    var selectedDeadlineInput: Int? by remember { mutableStateOf(0) }

    if (showDialog) {

        if(showDatePicker) {
...
            )
        }

        AlertDialog(
            onDismissRequest = { showDialog = false },
            title = {
                Text(text = if (selectedTabIndex == Tabs.WOCHE) "Neue Aufgabe hinzufügen" else "Neue Deadline hinzufügen")
            },
            text = {
                Column(verticalArrangement = Arrangement.spacedBy(1.dp)) {
                    OutlinedTextField(
                        value = taskTitleInput,
                        onValueChange = { taskTitleInput = it },
                        label = { Text("Titel / Beschreibung" ) },
                        modifier = Modifier.fillMaxWidth()
                    )
                    when(selectedTabIndex){
                        Tabs.WOCHE -> {
                            WeekDayDropdown(
                            selectedDay = selectedDayInput,
...

                        taskTitleInput = ""
                        deadlineDateInput = ""
                        showDialog = false
                    }
                ) {
                    Text("Speichern")
                }
            },
            dismissButton = {
                TextButton(onClick = { showDialog = false }) {
                    Text("Abbrechen")
                }
...
                onClick = {
                    showDialog = true
                },
                containerColor = MaterialTheme.colorScheme.primaryContainer,
                contentColor = MaterialTheme.colorScheme.onPrimaryContainer
            ) {
                Icon(Icons.Default.Add, contentDescription = "Add")
            }
        },
        topBar = {
            TabRow(selectedTabIndex = selectedTabIndex.ordinal) {
                Tabs.entries.forEachIndexed { index, title ->
                    Tab(
...
                .fillMaxWidth(),
            value = selectedDeadlineTitle ?: "",
            onValueChange = {},
            readOnly = true,
            label = {
                Text(
                    if (selectedDeadlineTitle == null) "Deadline" else "Verknüpfte Deadline"
                )
            },
            placeholder = {
                Text("Wähle...")
            },
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = isDropdownExpanded) },
...

        ExposedDropdownMenu(
            expanded = isDropdownExpanded,
            onDismissRequest = { isDropdownExpanded = false }
        ) {
            DropdownMenuItem(
                text = { Text("Keine Deadline") },
                onClick = {
                    selectedDeadlineTitle = null
                    onDeadlineSelected(null)
                    isDropdownExpanded = false
                }
            )
...
            TextButton(
                onClick = {
                    onDateSelected(formatMillisToDateString(state.selectedDateMillis))
                    onDismiss()
                }
            ) {
                Text("Ok")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Abbrechen")
            }
...
            modifier = Modifier
                .menuAnchor(type = MenuAnchorType.PrimaryNotEditable)
                .fillMaxWidth(),
            value = selectedDay,
            onValueChange = {},
            readOnly = true,
            label = {Text("Wochentag")},
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = isDropdownExpanded) },
            colors = ExposedDropdownMenuDefaults.outlinedTextFieldColors()
        )

        ExposedDropdownMenu(
            expanded = isDropdownExpanded,
...
            .fillMaxWidth()
            .clickable { onClick() }
    ) {
        OutlinedTextField(
            value = currentDateText,
            onValueChange = {  },
            label = { Text("Fälligkeitsdatum") },
            readOnly = true,
            enabled = false,
            modifier = Modifier.fillMaxWidth(),
            colors = OutlinedTextFieldDefaults.colors(
                disabledTextColor = MaterialTheme.colorScheme.onSurface,
                disabledBorderColor = MaterialTheme.colorScheme.outline,
...
