...
        }

    }

    Column(modifier = Modifier.fillMaxSize().padding(innerPadding)) {
        Text(
            text = "Anstehende Fristen und Klausuren",
            style = MaterialTheme.typography.titleLarge,
            modifier = Modifier.padding(bottom = 16.dp, top = 16.dp)
        )

        LazyColumn(
            verticalArrangement = Arrangement.spacedBy(12.dp),
...
